# qiskit-vqe-benchmarcking

./: .gitignore  GALLERY.md  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
notebooks/: VQE-data-generator.ipynb
results/data/: exact_energies.csv  exact_energies.pkl  noisy__100__hf__uccsd__cobyla__100.csv  noisy__100__hf__uccsd__cobyla__100.pkl  noisy__100__hf__uccsd__l_bfgs_b__100.csv  noisy__100__hf__uccsd__l_bfgs_b__100.pkl  noisy__100__hf__uccsd__slsqp__100.csv  noisy__100__hf__uccsd__slsqp__100.pkl  noisy__100__hf__uccsd__spsa__100.csv  noisy__100__hf__uccsd__spsa__100.pkl  settings_tree.pkl
